--- a/css-exercises/selectorsandvisualrules.html
+++ b/css-exercises/selectorsandvisualrules.html
@@ -3,7 +3,7 @@
 <h1>Exercise #1</h1>
   <head>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
-<link href="style.css" type="text/css" rel="stylesheet">
+<link href="selectorsandvisualrules.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div class="header">
