--- a/css-exercises/selectorsandvisualrules.html
+++ b/css-exercises/selectorsandvisualrules.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<h1>Exercise #1</h1>
+<h1>CSS Setup and Selectors</h1>
+  <h2>Exercise #1</h2>
   <head>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
 <link href="selectorsandvisualrules.css" type="text/css" rel="stylesheet">
