--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -7,8 +7,9 @@
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-
-  <p>Test Paragraph</p>
+    <h1>CSS Exercises</h1>
+    <a href="setupandselectors.html">Setup and Selectors</a>
+    <a href="visualrules.html">Visual Rules</a>
   
   </body>
 </html>
