--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>CSS Exercises</h1>
-    <a href="setupandselectors.html">Setup and Selectors</a>
+    <a href="setupandselectors.html">Setup and Selectors</a> <br>
     <a href="visualrules.html">Visual Rules</a>
   
   </body>
