--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <img src="/images/home.png">
   <br>
   <a href="https://conniecchen.github.io/exercises">Exercises Home</a>
+  <a href="css-exercises/index.html">CSS Exercises</a>
   
 
 
