--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <p style="color: red">I hope you enjoy my page. </p>
   <img src="/images/home.png">
   <br>
-  <a href="html-reference.html">HTML Reference</a>
-  <a href="https://conniecchen.github.io/exercises">Exercises Home</a>
-  <a href="css-exercises/index.html">CSS Exercises</a>
+  <a href="html-reference.html">HTML Reference</a> <br>
+  <a href="https://conniecchen.github.io/exercises">Exercises Home</a> <br>
+  <a href="css-exercises/index.html">CSS Exercises</a> <br>
   
 
 
