--- a/exercises/index.html
+++ b/exercises/index.html
@@ -22,7 +22,9 @@
     <li><a href="blocks.html">Blocks</a></li>
   </ul> 
   </div>
-  <a href="/index.html">Home Page</a>  
+  <br>
+
+  <a href="https://conniecchen.github.io/index.html">Home Page</a>  
 <style>
     ul { display:table; margin:0 auto;}
 </style>
