--- a/html-reference.html
+++ b/html-reference.html
@@ -308,7 +308,9 @@ Appearance:
   <h2>Computer Science</h2>
   <p>HTML Reference Page: Div</p>
 </div>
-    <a href="/index.html">Home Page</a>
+ <br>
+    <br>
+  <a href="https://conniecchen.github.io/index.html">Home Page</a> 
   </body>
 </html>
 
