--- a/html-reference.html
+++ b/html-reference.html
@@ -130,7 +130,8 @@ Tag Used: &lt;html&gt;- in beginning of the document <br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;          
 &lt;/html&gt;- in end of the whole document <br>
 About: The root element of an html page <br> 
-Appearance: Should not appear in actual browser 
+Appearance: Should not appear in actual browser <br>
+    <a href= "https://www.w3schools.com/html/html_basic.asp">W3 Schools</a>
 <hr> 
 
 <a name="head"></a>
@@ -139,7 +140,8 @@ Tag Used: &lt;head&gt;- placed right after html tag <br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
   &lt;/head&gt;- placed after defining the head (usually title)<br>
 About: Contains meta information about the document <br>
-Appearance: Should not appear in actual browser
+Appearance: Should not appear in actual browser <br>
+    <a href= "https://www.w3schools.com/html/html_headings.asp">W3 Schools</a>
 <hr> 
 
 <a name="title"></a>
@@ -148,7 +150,8 @@ Tag Used: &lt;title&gt;- placed after head tag <br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
    &lt;/title&gt;- placed after defining title <br>
 About: specifies a title for the document <br>
-Appearance: Should not appear in actual browser
+Appearance: Should not appear in actual browser <br>
+    <a href= "https://www.w3schools.com/html/html_attributes.asp">W3 Schools</a>
 <br>
 <br>
 
