--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -10,6 +10,6 @@
     <h1>CSS Exercises</h1>
     <a href="setupandselectors.html">Setup and Selectors</a> <br>
     <a href="visualrules.html">Visual Rules</a>
-  
+    <a href="selectors.html">Selectors Examples</a>
   </body>
 </html>
