--- a/html-reference.html
+++ b/html-reference.html
@@ -169,7 +169,8 @@ Tag Used: &lt;body&gt;- when starting to actually write content<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
   &lt;/body&gt;- after done writing the content <br>
 About: contains the visible page content <br>
-Appearance: Should not appear in actual browser, but is needed in order for content to appear
+Appearance: Should not appear in actual browser, but is needed in order for content to appear <br>
+    <a href= "https://www.w3schools.com/html/html_basic.asp">W3 Schools</a>
 <hr>
 
 <a name="headings"></a>
@@ -178,14 +179,16 @@ Tag Used: &lt;h1&gt;Heading 1&lt;/h1&gt;, &lt;h2&gt;Heading 2&lt;/h2&gt;<br>, et
 About: &lt;h1&gt; defines a large heading, &lt;h2&gt; would be a smaller heading, &lt;h2&gt; would be even smaller and so on. <br>
 Appearance: <br>
 <p style="font-size: 30px; line-height: 1px;">Heading 1 </p> <br>
-<p style="font-size: 20px; line-height: 1px;">Heading 2 </p>
+<p style="font-size: 20px; line-height: 1px;">Heading 2 </p> <br>
+    <a href= "https://www.w3schools.com/html/html_headings.asp">W3 Schools</a>
 <hr>
   
 <a name="paragraphs"></a>
 <b style="background-color:LightGray;width:15px;">Element: Paragraphs <br></b>
 Tag Used:&lt;p&gt;Content&lt;/p&gt; <br>
 About: defines a paragraph <br>
-Appearance: "This is a paragraph" 
+Appearance: "This is a paragraph" <br>
+    <a href= "https://www.w3schools.com/html/html_paragraphs.asp">W3 Schools</a>
 <hr>
 
 <a name="breaks"></a>
@@ -194,21 +197,24 @@ Tag Used: &lt;br&gt; <br>
 About: defines a line break, an empty element without a closing tag<br>
 Appearance:
 This is <br>
-a line break 
+a line break <br>
+    <a href= "https://www.w3schools.com/html/html_paragraphs.asp">W3 Schools</a>
 <hr>
 
 <a name="lines"></a>
 <b style="background-color:LightGray;width:15px;">Element: Lines <br></b>
 Tag Used: &lt;hr&gt; <br>
 About: a line going across the page, used when dividing sections <br>
-Appearance: is the line below<hr> 
+Appearance: is the line below<hr> <br>
+     <a href= "https://www.w3schools.com/tags/tag_hr.asp">W3 Schools</a>
 <hr>
 
 <a name="comments"></a>
 <b style="background-color:LightGray;width:15px;">Element: Comments <br></b>
 Tag Used: &lt;!-- --&gt; <br>
 About: Can place notifications and reminders in your HTML or can be used to debug html <br>
-Appearance: Should not appear in actual broswer
+Appearance: Should not appear in actual broswer <br>
+    <a href= "https://www.w3schools.com/html/html_comments.asp">W3 Schools</a>
 <hr>
 
 <a name="links"></a>
@@ -216,7 +222,8 @@ Appearance: Should not appear in actual broswer
 Tag Used: &lt;a&gt; (popular one is &lt;a href&gt;) and &lt;/a&gt; <br>
 Example: &lt;a href="url"&gt;link text&lt;/a&gt; <br>
 About: The href attribute specifies the destination address. The link text is the visible part. <br>
-Appearance: <a href="/exercises">Exercise Home</a>
+Appearance: <a href="/exercises">Exercise Home</a> <br>
+    <a href= "https://www.w3schools.com/html/html_links.asp">W3 Schools</a>
 <hr>
 
 <a name="images"></a>
@@ -226,7 +233,9 @@ Example: &lt;img src="url"&gt; <br>
 About: The &lt;img&gt; tag is empty and does not have a closing tag. The src attribute defines the URL of the image. <br>
 Appearance: <br>
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/200px-HTML5_logo_and_wordmark.svg.png" alt:"HTML5"> 
-<hr>
+<br>
+    <a href= "https://www.w3schools.com/html/html_images.asp">W3 Schools</a>
+    <hr>
 
 <a name="lists"></a>
 <b style="background-color:LightGray;width:15px;">Element: Lists</b> <br>
@@ -244,7 +253,9 @@ Appearance:
   <li>Coffee</li>
   <li>Tea</li>
   <li>Milk</li>
-</ul> <hr>
+</ul> <br>
+    <a href= "https://www.w3schools.com/html/html_lists.asp">W3 Schools</a>
+    <hr>
 
 <a name="tables"></a>
 <b style="background-color:LightGray;width:15px;">Element: Tables</b> <br>
@@ -300,6 +311,8 @@ Appearance:
       <td>3</td>
   </tr>
 </table>
+    <br>
+    <a href= "https://www.w3schools.com/html/html_tables.asp">W3 Schools</a>
 <hr>
 
 <a name="blocks"></a>
@@ -313,6 +326,8 @@ Appearance:
 </div>
  <br>
     <br>
+    <a href= "https://www.w3schools.com/html/html_blocks.asp">W3 Schools</a>
+    <hr>
   <a href="https://conniecchen.github.io/index.html">Home Page</a> 
   </body>
 </html>
