--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>CSS Exercises</h1>
     <a href="setupandselectors.html">Setup and Selectors</a> <br>
-    <a href="visualrules.html">Visual Rules</a>
+    <a href="visualrules.html">Visual Rules</a> <br>
     <a href="selectors.html">Selectors Examples</a>
   </body>
 </html>
