--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -11,5 +11,7 @@
     <a href="setupandselectors.html">Setup and Selectors</a> <br>
     <a href="visualrules.html">Visual Rules</a> <br>
     <a href="selectors.html">Selectors Examples</a>
+    <hr>
+    <a href="https://conniecchen.github.io/index.html">Home Page</a>
   </body>
 </html>
