--- a/exercises/lists.html
+++ b/exercises/lists.html
@@ -43,7 +43,7 @@ ul#menu li {
 <body>
 
 <ul id="menu">
-  <li>Apples</li>
+  <li>Apples</li> <br>
   <a href="https://conniecchen.github.io/exercises">Exercises Home</a>
 </body>
 </html>
