--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -10,7 +10,8 @@
     <h1>CSS Exercises</h1>
     <a href="setupandselectors.html">Setup and Selectors</a> <br>
     <a href="visualrules.html">Visual Rules</a> <br>
-    <a href="selectors.html">Selectors Examples</a>
+    <a href="selectors.html">Selectors Examples</a> <br>
+    <a href="properties.html">Properties</a>
     <hr>
     <a href="https://conniecchen.github.io/index.html">Home Page</a>
   </body>
